wow i did a few things

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-    <button>start thingy</button>
-    <button id="openWebApp">open thingy</button>
+    <h1>YTM Beautifier</h1>
+    <button id="openWebApp">Open Pretty Fullscreen</button>
 </body>
 <script src="popup-scripts.js"></script>
 </html>
