even more changes

--- a/extension/webapp.html
+++ b/extension/webapp.html
@@ -31,10 +31,8 @@
     }
 
     .info-body{
-        margin-left:20px;
         width:45vw;
         text-align: right;
-        flex:1;
         color:white;
         display:flex;
         flex-direction: column;
@@ -261,7 +259,7 @@
                 </div>
             </div>
             <div class="words-div">
-                <h1 id="title">Title</h1>
+                <h1 id="title" style="margin-bottom:0;">Title</h1>
                 <h2 id="artist-album" style="margin-bottom:15px;">Artist • Album</h2>
                 
             </div>  
