official lyric source

--- a/extension/webapp.html
+++ b/extension/webapp.html
@@ -303,7 +303,7 @@
                     <img src="assets/pause.png" data-paused="false" id="pauseplaybutton" style="width:30px; height:30px;">
                     <img src="assets/right skip.png" id="nextbutton">
                 </div>                
-                <div class="time-container">
+                <div class="time-container" id="time">
                     <div class="time-popup-holder">
                         <div class="time-adjustment">
                             <div class="time-adjustment-details">Adjust Lyrics Time Offset</div>
