--- a/extension/popup.html
+++ b/extension/popup.html
@@ -22,7 +22,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: linear-gradient(90deg, rgba(209,13,102,1) 0%, rgba(10,10,168,1) 35%, rgba(5,113,212,1) 68%, rgba(0,255,8,1) 100%);
+        background-image: linear-gradient(90deg, rgba(201, 98, 91,1) 0%, rgba(91, 91, 201,1) 35%, rgba(91, 201, 188,1) 68%, rgba(100, 181, 96,1) 100%);
         opacity: 0;
         transition: opacity 0.5s;
         border-radius: 5px;
@@ -47,7 +47,7 @@
 </style>
 <body style="height:300px; width:275px; display:flex; flex-direction: column; align-items: center; justify-content: center;">
     <img src="assets/128x128.png">
-    <h1>Better YTM</h1>
+    <h1>YTM Beautifier</h1>
     <button id="openWebApp">Open Pretty Fullscreen</button>
 </body>
 <script src="popup-scripts.js"></script>
