--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -80,6 +80,7 @@
             <li>The current song's artist</li>
             <h2>Why it's transmitted: </h2>
             <p>We need these three things to find the lyrics for your song. They are processed and sent to one of a few places.</p>
+            <li>Our Server. Your data passes through our server, which uses it to get lyrics from one of the databases we use.</li>
             <li><a href="https://youtube.com">YouTube</a>. This one shouldn't be surprising- we try to get the lyrics from here first.</li>
             <li><a href="https://musixmatch.com">MusixMatch</a>. This is one of the "backup databases". We query Musixmatch for lyrics if YouTube does not have them.</li>
             <li><a href="https://music.163.com">NetEase</a>. This is another one of the "backup databases", and like above, it is only asked if YouTube returns nothing.</li>
