--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -72,7 +72,7 @@
             <div style="width:100%; align-items: center; display: flex; justify-content: center;">
                 <img src="static/128x128.png" style="height:100px;">
             </div>
-            <h1 style="color:#5e7779; font-weight: 800;">Hey!</h1><h2 style="font-weight: 500;">Thanks for checking out the extension. Let's talk about privacy.</h2>
+            <h1 style="color:#5e7779; font-weight: 800;">Hey!</h1><h2 style="font-weight: 500;">Thanks for checking out the YouTube Music Beautifier extension. Let's talk about privacy.</h2>
             <h3>By and large, this extension doesn't collect much data. Essentially everything stays on <strong>your computer</strong>, and only 3 things ever leave.</h3>
             <h2>What is transmitted: </h2>
             <li>The current song's title</li>
@@ -90,6 +90,7 @@
             <p>If you are concerned about this, I encourage you to read their privacy policies or look into self-hosting the lyric server (info on our <a href="https://github.com/nwvbug/YouTubeMusic-Beautifier">GitHub</a>)</p>
             <h3>Thanks for taking a look!</h3>
             <h4>- nwvbug</h4>
+            <h5 style="width:100%; text-align: center;">YTM Beautifier is made with ❤️ in California</h5>
         </div>
         
     </div>
