doing flask properly

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YTM Beautifier Privacy Policy</title>
-    <link rel="icon" src="https://127.0.0.1:7070/assets/logo">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/logo">
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&display=swap');
