bugfix with sharing menu

--- a/extension/webapp.html
+++ b/extension/webapp.html
@@ -97,7 +97,7 @@
         
     </div>
 
-    <div class="settings-holder" id="sharing-overall">
+    <div class="settings-holder" id="sharing-overall" style="z-index:2;">
         <div class="settings-panel" id="sharing-panel">
             <img src="assets/128x128.png" style="height:100px; width:100px; margin-top:20px;">
             <h1>Connectivity & Sharing</h1>
