settings & UI for Remote Control

--- a/extension/webapp.html
+++ b/extension/webapp.html
@@ -132,7 +132,30 @@
                             <input type="checkbox" id="remote-control-check">
                             <span class="slider round"></span>
                         </label>
-                </div>
+                    </div>
+
+                    <div class="source-entry" style="width:100%;">
+                        <div class="source-name">
+                            <div>
+                                <p style="font-size:18px; margin-bottom:0;">Require Connected Device Names</p>  
+                                <p style="margin-top:0">Good for knowing who is connected at a party.</p>
+                            </div>
+                        </div>
+                        <label class="switch">
+                            <input type="checkbox" id="require-device-names">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+
+                    <div class="source-entry" style="width:100%;">
+                        <div class="source-name">
+                            <div>
+                                <p style="font-size:18px; margin-bottom:0;">This Device's Name</p>  
+                                <p style="margin-top:0">What people will see when they connect.</p>
+                            </div>
+                        </div>
+                        <input type="text" class="settings-input" id="device-name-input">
+                    </div>
                 </div>
             </div>
 
