pre-UI update commit

--- a/extension/webapp.html
+++ b/extension/webapp.html
@@ -129,7 +129,7 @@
                             </div>
                         </div>
                         <label class="switch">
-                            <input type="checkbox" id="remote-control-check">
+                            <input type="checkbox" id="remote-control-check" checked="true">
                             <span class="slider round"></span>
                         </label>
                     </div>
