config for live

--- a/extension/webapp.html
+++ b/extension/webapp.html
@@ -14,7 +14,7 @@
             <div class="info-panel" id="info-panel">
                 <div class="info-panel-contents" id="info-panel-contents">
                 <div class="image-holder">
-                    <img id="album-image" src="/static/linkinparktestimage.jpg">
+                    <img id="album-image" src="">
                     <div class="portrait-progress-bar" id="progressbarholder-portrait">
                         <div class="progress-bar-inner" id="progressbar-portrait">
                         </div>
@@ -26,8 +26,8 @@
 
                 <div class="text-controls-holder">
                     <div class="title-artist-album">
-                        <h1 class="title" id="title">The Emptiness Machine</h1>
-                        <h2 class="artist-album" id="artist-album">Linkin Park • From Zero</h2>
+                        <h1 class="title" id="title">Title</h1>
+                        <h2 class="artist-album" id="artist-album">Artist • Album</h2>
                     </div>
 
                 
