Moved to web workers for better background performance

--- a/extension/webapp.html
+++ b/extension/webapp.html
@@ -267,5 +267,5 @@
 <script src="reciever.js"></script>
 <script src="displayer.js"></script>
 <script src="webapp-controller.js"></script>
-<script src="sockets.js"></script>
+<script src="workerhandler.js"></script>
 </html>
