transition to offscreen document
this will help with long-lived socket connections even if chrome throttles or sleeps the main page, so people can use in background

--- a/extension/webapp.html
+++ b/extension/webapp.html
@@ -266,6 +266,7 @@
 <script src="parser.js"></script>
 <script src="reciever.js"></script>
 <script src="displayer.js"></script>
+<script src="liveutils.js"></script>
 <script src="webapp-controller.js"></script>
-<script src="workerhandler.js"></script>
+
 </html>
