--- a/extension/webapp.html
+++ b/extension/webapp.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="loader">
+            <img src="assets/nobackground.png" class="loader-image">
+    </div>
     <canvas id="backgroundCanvas" style="width:100vw; height:100vh; position:absolute; z-index:-2;"></canvas>
     <div id="canvas-hider" style="z-index:-1; position: absolute; width:100vw; height:100vh; background-color:black; opacity: 0; transition: 0.5s;"></div>
         <div id="canvas-hider" style="z-index:-1; position: absolute; width:100vw; height:100vh; background-color:black; opacity: 0; transition: 0.5s;"></div>
